[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
logos = "0.13.0"
regex = "1.10.2"
rayon = "1.8.0"

[dev-dependencies]
indoc = "2.0.4"